Final responsive navbar update: style + behavior fixes

--- a/sentimental_analysis/realworld/static/css/nemina.css
+++ b/sentimental_analysis/realworld/static/css/nemina.css
@@ -70,7 +70,7 @@ body {
 /* Apply styles to .navbar */
 
 .navbar {
-  background-color: #f1ece5 !important;
+  background-color:#d96b4f!important;
   color: white;
   padding: 5px 5px;
   position: fixed;
