--- a/sentimental_analysis/realworld/templates/realworld/footer.html
+++ b/sentimental_analysis/realworld/templates/realworld/footer.html
@@ -2,14 +2,15 @@
     <div class="row clearfix">
         <div class="col-2">
             <p id="dev">
-                &copy; Extended by Team 06: <a href="https://github.com/NCSU-SE-Spring2025-Group6/Sentimental-Analyzer-Pro.git">Sentimental-Analyzer-Pro</a>
+                &copy; Extended by Team 07: <a href="https://github.com/CSC-510-G7/Sentimental-Analyzer-Pro">Sentimental-Analyzer-Pro</a>
             </p>
         </div>
         <div class="col-2 disclaimer">
             <div class="team-members">
                 <p>Team Members: 
-                    <a href="https://github.com/jakariamd" target="_blank">Md Jakaria</a>&nbsp; 
-                    <a href="https://github.com/a-wright-git" target="_blank">Autumn Wright</a>
+                    <a href="https://github.com/BrandonTroy" target="_blank">Brandon Troy</a>&nbsp; 
+                    <a href="https://github.com/Kanchi11" target="_blank">Kanchana Dhana Sadasivan</a>&nbsp;
+                    <a href="https://github.com/ChristopherElchik" target="_blank">Chris Elchik</a>
                 </p>
             </div>
         </div>
