Navbar style improvements

--- a/sentimental_analysis/realworld/static/css/nemina.css
+++ b/sentimental_analysis/realworld/static/css/nemina.css
@@ -75,7 +75,7 @@ body {
 .navbar {
   background-color:#d96b4f!important;
   color: white;
-  padding: 5px 5px;
+  padding: 1rem 2rem;
   position: fixed;
   width: 100%;
   top: 0;
@@ -121,6 +121,15 @@ body {
 .navbar li a:active {
   background-color: #fff;
   color: #b24020;
+}
+
+.navbar-links > * {
+  padding: 0.5rem 0.75rem;
+  border-radius: 10px;
+}
+
+.navbar-links > *:hover {
+  background-color: #eb8b73;
 }
 
 #pro {
