--- a/sentimental_analysis/realworld/templates/realworld/index.html
+++ b/sentimental_analysis/realworld/templates/realworld/index.html
@@ -112,7 +112,7 @@
           
          
          <main id="content" class="bgcol">
-            <section id="about" class="introduction scrollto" style="margin-left: :17px;">
+            <section id="about" class="introduction scrollto">
                <div class="row clearfix" >
                   
                      <div class="col-1-2">
