added youtube history + nav

--- a/sentimental_analysis/realworld/templates/realworld/header.html
+++ b/sentimental_analysis/realworld/templates/realworld/header.html
@@ -32,6 +32,7 @@
         <a href="/#facebook" onclick="closeNavbar()">Facebook</a>
         <a href="/#twitter" onclick="closeNavbar()">Twitter</a>
         <a href="/#reddit" onclick="closeNavbar()">Reddit</a>
+        <a href="/#youtube" onclick="closeNavbar()">Youtube</a>
       </div>
     </div>
     <div class="dropdown">
