--- a/sentimental_analysis/realworld/templates/realworld/index.html
+++ b/sentimental_analysis/realworld/templates/realworld/index.html
@@ -214,6 +214,15 @@
                            <p>Upload an Image and Sentiment Analyzer Pro will analyze the image and report back the sentiments felt by the person like  happy, sad, etc.</p>
                         </div>
                      </div>
+                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="icon">
+                           <i class="fas fa-brands fa-youtube fa-2x"></i>
+                        </div>
+                        <div class="icon-block-description">
+                           <h4>Youtube Analysis</h4>
+                           <p>Upload a video link and Sentiment Analyzer Pro will analyze either the video transcript or the top comments and report back the sentiment statistics.</p>
+                        </div>
+                     </div>
                      </div>
                   </div>
                 </div>
