Make navbar title a home link

--- a/sentimental_analysis/realworld/templates/realworld/header.html
+++ b/sentimental_analysis/realworld/templates/realworld/header.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-  <div class="navbar-brand">Sentiment Analyzer Pro</div>
+  <a href="/" class="navbar-brand">Sentiment Analyzer Pro</a>
   <button class="navbar-toggle" onclick="toggleNavbar()">☰</button>
   <div class="navbar-links" id="navbar-links">
     <a href="/#about"  onclick="closeNavbar()">About</a>
